0.07 2023-02-07
  [Distribution Bug Fix]
    * Don't index cpanm by removing cpanm file.
  [Test Improvement]
    * Updated Github Action workflows
0.06 2022-06-28
  * Update documents
0.05 2022-06-23
  * Fix test bugs.
0.04 2022-06-22
  * [Revert 0.03]Time::Loca->timegm and Time::Loca->timelocal call Time->timegm and Time->timelocal
  * Catch up with SPVM 0.9610.
0.03 2022-06-21
  
  * Time::Loca->timegm and Time::Loca->timelocal call Time->timegm and Time->timelocal
  
0.02 2022-06-16
  
  * Improve doc.
  
0.01 2022-06-16
  
  * First development release.